# AutoPPT

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  app.py  ask.yaml  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.agent/workflows/: update-docs.md
.github/workflows/: publish.yml  test.yml  workflow.yml
autoppt/: __init__.py  app.py  config.py  data_types.py  deck_qa.py  exceptions.py  generator.py  layout_selector.py  llm_provider.py  main.py  ppt_renderer.py  researcher.py  sample_library.py  slide_planner.py  style_selector.py  template_handler.py  themes.py  thumbnail.py
core/: data_types.py  exceptions.py  generator.py  llm_provider.py  ppt_renderer.py  researcher.py
docs/: architecture.md  architecture.zh-CN.md
output/: Artificial_Intelligence_in_Modern_Medicine.pptx  Evolution_of_Modern_Architecture.pptx  Test.pptx  The_History_of_Space_Exploration.pptx
samples/: README.md  README.zh-CN.md  cn_art.pptx  cn_life.pptx  cn_tech.pptx  cn_visual_showcase.pptx  en_art.pptx  en_life.pptx  en_tech.pptx  en_visual_showcase.pptx  feature_layouts_cn.pptx  feature_layouts_en.pptx  feature_workbench.pptx  sample.pptx
scripts/: check_sensitive.py  generate_readme_previews.py  generate_sample.py  generate_samples.py  install_hooks.py
templates/: README.md  README.zh-CN.md
tests/: conftest.py  test_config.py  test_data_types.py  test_deck_qa.py  test_exceptions.py  test_generator.py  test_layout_selector.py  test_llm_provider.py  test_main.py  test_renderer.py  test_researcher.py  test_sample_library.py  test_slide_planner.py  test_style_selector.py  test_template_handler.py  test_themes.py  test_thumbnail.py
